# IBEX-device-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  generate.py  paths.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run_tests.py
.github/workflows/: lint-and-test-nightly.yml  python-app.yml
src/ibex_device_generator/: __init__.py  __main__.py  cli.py  exc.py  generate.py  ibex_device_generator.py  paths.py
src/ibex_device_generator/templates/: README.md
src/ibex_device_generator/templates/4/support/@device_/: Makefile
src/ibex_device_generator/templates/4/support/@device_/master/: .gitignore  README.md
src/ibex_device_generator/templates/8/uk.ac.stfc.isis.ibex.opis/resources/: @{opi_file_name}.opi
src/ibex_device_generator/templates/t_4/support/@device_nospace/: Makefile
src/ibex_device_generator/templates/t_4/support/@device_nospace/master/: .gitignore  LICENCE  README.md
src/ibex_device_generator/utils/: arg_parser.py  command.py  date.py  device_info.py  file_system.py  git.py  git_utils.py  github.py  gui.py  placeholders.py  rich.py  rich_utils.py  step.py  templates.py
templates/phase_add_1st_ioc/ioc/master/@{ioc_name}/@{ioc_name}-IOC-01App/src/: @{ioc_name}-IOC-01Main.cpp  Makefile  build.mak
templates/phase_add_1st_ioc/ioc/master/@{ioc_name}/configure/: RELEASE
templates/phase_add_1st_ioc/ioc/master/@{ioc_name}/iocBoot/ioc@{ioc_name}-IOC-01/: st-common.cmd  st.cmd
templates/phase_add_opi_to_gui/uk.ac.stfc.isis.ibex.opis/resources/: @{opi_file_name}.opi
templates/phase_add_support_submodule/support/@{device_support_module_name}/master/: Makefile
templates/phase_add_support_submodule/support/@{device_support_module_name}/master/@{device_support_module_name}Sup/: Makefile
templates/phase_add_support_submodule/support/@{device_support_module_name}/master/documentation/: dev@{device_support_module_name}.html
templates/phase_add_test_framework/support/@{device_support_module_name}/master/system_tests/: run_tests.bat
tests/: test_device_info.py  test_file_system_utils.py  test_git_utils.py  test_placeholders.py
utils/: arg_parser.py  command.py  date.py  device_info.py  file_system.py  git_utils.py  github.py  github_requests.py  gui.py  placeholders.py  step.py  substitution_keys.py  templates.py
(+22 files in other folders)
