[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibex_device_generator"
version = "1.0.3"
authors = [
  { name="Zsolt Kebel", email="25386639+zsoltkebel@users.noreply.github.com" },
]
description = "Easily generate starter code to develop an IOC in the IBEX instrument control system."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
  # How mature is this project?
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",

  "License :: OSI Approved :: BSD License",

  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "GitPython >= 3.1.43",
  "lxml >= 5.2.1",
  "Requests >= 2.32.3",
  "rich >= 13.7.1",
  "ruff >= 0.4.6",
]

[project.urls]
Homepage = "https://github.com/ISISComputingGroup/IBEX-device-generator"
Issues = "https://github.com/ISISComputingGroup/IBEX-device-generator/issues"

# This script will enable user to call ibex_device_generator from command line as a command
[project.scripts]
ibex_device_generator = "ibex_device_generator.cli:main"

# Add src to pythonpath so imports work in test files.
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
